--- a/src/style.css
+++ b/src/style.css
@@ -70,3 +70,22 @@ div[data-hourBox] {
     background-color: red;
     place-self: center;
 }
+
+.display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.weatherNav {
+    width: 95%;
+    display: flex;
+    height: max-content;
+    justify-content: space-between;
+}
+
+div[data-dayBox] {
+    height: 400px;
+    width: 90%;
+    background-color: green;
+}
