add styling to all elements

--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,36 @@ body {
     margin: 0;
 }
 
+div {
+    font-family: sans-serif;
+}
+
+p {
+    margin: 0;
+    font-family: sans-serif;
+}
+
 form {
     margin: 20px;
     padding: 10px;
+    height: 100px;
+    width: 85%;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.searchButton {
+    border: none;
+    border-radius: 10px;
+    height: 40px;
+    width: 100px;
+    font-size: 22px;
+    background-color: rgb(13, 13, 62);
+    color: white;
 }
 
 #content {
@@ -21,17 +48,23 @@ form {
 }
 
 .leftImage {
-    height: 70vh;
+    height: 65vh;
 }
 
 .leftHourly {
-    height: 30vh;
+    min-height: 35vh;
     position: relative;
-    background-color: black;
+    background-color: rgb(13, 13, 62);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.leftHourly > h2 {
+    color: white;
+    position: absolute;
+    top: 0;
 }
 
 .arrowNav {
@@ -54,10 +87,21 @@ form {
     grid-template-columns: repeat(8, 1fr);
 }
 
+.hideHours {
+    display: none;
+}
+
+.hideDayTemps {
+    display: none;
+}
+
 .right {
     grid-column: 5/6;
     height: 100vh;
-    background-color: blue;
+    background-color: rgb(13, 13, 62);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hide {
@@ -65,10 +109,24 @@ form {
 }
 
 div[data-hourBox] {
-    height: 130px;
+    color: white;
+    height: 140px;
     width: 90%;
-    background-color: red;
-    place-self: center;
+    background-color: rgb(13, 13, 62);
+    place-self: center center;
+    font-size: 22px;
+    text-align: center;
+    position: relative;
+}
+
+.toggleT {
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    height: 50px;
+    width: 200px;
+    background-color: rgb(13, 13, 62);
+    color: white;
 }
 
 .display {
@@ -85,7 +143,12 @@ div[data-hourBox] {
 }
 
 div[data-dayBox] {
-    height: 400px;
-    width: 90%;
-    background-color: green;
+    font-size: 25px;
+    padding: 20px;
+    height: 350px;
+    width: 85%;
+    background-color: rgb(0, 132, 255);
+    color: white;
+    border-radius: 10px;
+    text-align: center;
 }
